[package]
name = "tildes-parser"
description = "Consolidated parsing for Tildes.net HTML."
repository = "https://git.bauke.xyz/tildes-community/tildes-parser"
license = "AGPL-3.0-or-later"
version = "0.1.0"
authors = ["Bauke <me@bauke.xyz>"]
edition = "2021"

[lib]
path = "source/lib.rs"

[dependencies]
chrono = "0.4.26"
duplicate = "^1.0.0"
lazy_static = "^1.4.0"
regex = "^1.8.4"
scraper = "^0.16.0"
thiserror = "1.0.40"

[dev-dependencies]
insta = "^1.29.0"
