[package]
name = "tildes-parser"
description = "Consolidated parsing for Tildes.net HTML."
repository = "https://git.bauke.xyz/tildes-community/tildes-parser"
license = "AGPL-3.0-or-later"
version = "0.1.0"
authors = ["Bauke <me@bauke.xyz>"]
edition = "2021"

[lib]
path = "source/lib.rs"

[dependencies]
chrono = "0.4.34"
duplicate = "^1.0.0"
lazy_static = "^1.4.0"
regex = "^1.10.3"
scraper = "^0.18.1"
thiserror = "1.0.57"

[dev-dependencies]
insta = "^1.35.1"
